--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,15 +4,31 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="15"/>
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="Main"
-                  android:label="@string/app_name">
+    <application
+        android:label="@string/app_name"
+        android:icon="@drawable/ic_launcher">
+
+        <activity
+            android:name="Main"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ActualLocationActivity"
+            android:label="Actual Location Providers">
+        </activity>
+
+        <activity
+            android:name=".MockLocationActivity"
+            android:label="Mock Location Providers">
+        </activity>
+
     </application>
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
 </manifest>
